<resources>
    <string name="app_name">Swoosh</string>
    <string name="get_started">GET STARTED</string>
    <string name="find_a_team_in_your_city_dominate_the_league">
        <![CDATA[Find a team in your city & dominate the league.]]></string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="desired_league">Desired League:</string>
    <string name="mens">mens</string>
    <string name="next">Next</string>
    <string name="womens">womens</string>
    <string name="co_ed">co-ed</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">beginner</string>
    <string name="baller">baller</string>
    <string name="finish">Finish</string>
    <string name="search_league">Looking for a co-ed beginner league near you...</string>
</resources>
