<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LeagueSelectionActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/desiredleaguebg"
            android:id="@+id/background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="ContentDescription"/>

    <ImageView
            android:src="@drawable/swooshlogo"
            android:layout_width="105dp"
            android:layout_height="45dp"
            android:id="@+id/swooshlogo"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:scaleType="fitCenter"
            tools:ignore="ContentDescription"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/desired_league"
            android:text="@string/desired_league"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/swooshlogo"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/montserrat"/>

    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/button2"
            android:background="@drawable/button"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:textColor="@android:color/white"
            app:layout_constraintHorizontal_bias="0.0"
            android:fontFamily="@font/montserrat"
            android:textSize="18sp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="leagueNextClicked"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/desired_league"
            app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/linearLayout">

        <ToggleButton
                android:text="@string/mens"
                android:layout_width="match_parent"
                android:id="@+id/toggleButton6"
                android:textOff="@string/mens"
                android:textOn="@string/mens"
                android:fontFamily="@font/montserrat"
                android:textSize="18sp"
                android:background="@drawable/toggle"
                android:layout_height="50dp"
                android:textColor="@android:color/white"
                />

        <ToggleButton
                android:text="@string/womens"
                android:layout_width="match_parent"
                android:id="@+id/toggleButton4"
                android:layout_marginTop="16dp"
                android:textOff="@string/womens"
                android:textOn="@string/womens"
                android:fontFamily="@font/montserrat"
                android:textSize="18sp"
                android:layout_height="50dp"
                android:background="@drawable/toggle"
                android:textColor="@android:color/white"
                android:layout_marginBottom="16dp"/>

        <ToggleButton
                android:text="@string/co_ed"
                android:layout_width="match_parent"
                android:id="@+id/toggleButton5"
                android:textOff="@string/co_ed"
                android:textOn="@string/co_ed"
                android:fontFamily="@font/montserrat"
                android:textSize="18sp"
                android:layout_height="50dp"
                android:background="@drawable/toggle"
                android:textColor="@android:color/white"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>