<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WelcomeActivity">

    <ImageView
            android:src="@drawable/welcomescreenbg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintDimensionRatio="w,1:1"
            android:scaleType="centerCrop" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="ContentDescription"/>
    <ImageView
            android:src="@drawable/swooshlogo"
            android:layout_width="105dp"
            android:layout_height="45dp"
            android:id="@+id/imageView2" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:scaleType="fitCenter"
            tools:ignore="ContentDescription"/>
    <TextView
            android:text="@string/go_all_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:textColor="@color/colorAccent"
            android:fontFamily="@font/montserrat" android:textSize="46sp" android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.491"/>
    <TextView
            android:text="@string/on_going_all_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:textColor="@color/colorAccent"
            android:fontFamily="@font/montserrat" android:textSize="23sp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/find_a_team_in_your_city_dominate_the_league"
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" android:textColor="@color/colorAccent"
            android:textSize="18sp" android:fontFamily="@font/montserrat" android:textAlignment="center"
            android:layout_marginTop="52dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:singleLine="false" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:text="@string/get_started"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/getStartedBtn"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="300dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintHorizontal_bias="0.0"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:background="@drawable/button"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.829"/>

</android.support.constraint.ConstraintLayout>