<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SkillSelectionActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/imageView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription"/>

    <ImageView
            android:src="@drawable/swooshlogo"
            android:layout_width="105dp"
            android:layout_height="45dp"
            android:id="@+id/imageView3"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:scaleType="fitCenter"
            tools:ignore="ContentDescription"/>

    <TextView
            android:text="@string/i_am_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat"
            android:textColor="@android:color/white"/>

    <ToggleButton
            android:text="@string/beginner"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/beginnerBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/ballerBtn"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:background="@drawable/toggle"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="24dp"
            android:textOff="@string/beginner"
            android:textOn="@string/beginner"/>

    <ToggleButton
            android:text="@string/baller"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/ballerBtn"
            app:layout_constraintStart_toEndOf="@+id/beginnerBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/toggle"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toTopOf="@+id/beginnerBtn"
            app:layout_constraintBottom_toBottomOf="@+id/beginnerBtn"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="16dp"
            android:textOff="@string/baller"
            android:textOn="@string/baller"/>

    <Button
            android:text="@string/finish"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/finishBtn"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat"
            android:textColor="@android:color/white"
            android:background="@drawable/button"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>